--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
 
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="header_spacing">16dp</dimen>
+    <dimen name="fab_spacing">32dp</dimen>
 
 </resources>
