--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.JokerApp" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Base.Theme.JokerApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/orange_500</item>
         <item name="colorPrimaryVariant">@color/orange_700</item>
@@ -14,4 +14,8 @@
     </style>
 
     <style name="Theme.JokerApp" parent="Base.Theme.JokerApp" />
+
+
+    <style name="Theme.JokerApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.JokerApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
