--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -12,7 +12,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/orange_700"
             android:theme="@style/Theme.JokerApp.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:backgroundTint="@color/blue_200"
         android:layout_margin="@dimen/fab_spacing"
         android:contentDescription="@null"
         android:src="@drawable/ic_refresh" />
