--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,24 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home"
-        android:title="@string/menu_home" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home"
+            android:title="@string/menu_home" />
 
-    <item
-        android:id="@+id/nav_joke_day"
-        android:icon="@drawable/ic_today"
-        android:title="@string/menu_joke_day" />
+        <item
+            android:id="@+id/nav_joke_day"
+            android:icon="@drawable/ic_today"
+            android:title="@string/menu_joke_day" />
+    </group>
 
 
     <item android:title="@string/social">
         <menu>
-            <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/ic_about"
-                android:title="@string/menu_about" />
-
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_about"
+                    android:icon="@drawable/ic_about"
+                    android:title="@string/menu_about" />
+            </group>
         </menu>
     </item>
+
 </menu>
