--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -23,6 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="50dp"
+        android:textStyle="bold|italic"
+        android:textSize="24sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_logo"
@@ -50,6 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
